# mint-cnft

./: .gitignore  Anchor.toml  package-lock.json  package.json
assets/: collection-metadata.json  nft-metadata.json
programs/skytrade-task/: Cargo.toml
programs/skytrade-task/src/: lib.rs
tests/: skytrade-task.ts
