[package]
name = "skytrade-task"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skytrade_task"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang ={version="0.30.0", features=["init-if-needed"]}
anchor-spl = {version = "0.30.0",features = ["metadata"]}
mpl-bubblegum = { version = "0.7.0", features=["cpi"] }
mpl-token-metadata = { version = "=4.1.2", features = ["no-entrypoint"] }
