[package]
name = "skytrade-task"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skytrade_task"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang ={version="0.27.0", features=["init-if-needed"]}
solana-program = "1.14.18"
anchor-spl = {version = "0.27.0",features = ["metadata"]}
mpl-bubblegum = { version = "0.7.0", features=["cpi","no-entrypoint"] }
mpl-token-metadata = { version = "=1.9.0", features = ["no-entrypoint"] }
